--- a/servers/mlopes.xyz/server.conf
+++ b/servers/mlopes.xyz/server.conf
@@ -4,9 +4,9 @@ server {
     server_name mlopes.xyz;
 
     location / {
-    #    root /usr/local/openresty/nginx/html;
-    #    index index.html index.htm;
-        return 418;
+        root /usr/local/openresty/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ =404;
     }
 
 }
