--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,6 +1,6 @@
 #Important to note the user. Change the name of user in charge accordingly
 
-user root;
+user www-data;
 
 events {
   worker_connections 1024;
