--- a/servers/default.conf
+++ b/servers/default.conf
@@ -6,9 +6,12 @@ ssl_certificate_by_lua_block {
 ssl_certificate /etc/ssl/resty-auto-ssl-fallback.crt;
 ssl_certificate_key /etc/ssl/resty-auto-ssl-fallback.key;
 
-error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 500 501 502 503 504 505 506 507 508 510 511 /dwapo-hagnarok;
+error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 500 501 502 503 504 505 506 507 508 510 511 /dwapo-hagk;
 
-location = /dwapo-hagnarok {
+location = /favicon.ico { access_log off; log_not_found off; }
+location = /robots.txt  { access_log off; log_not_found off; }
+
+location = /dwapo-hagk {
     internal;
     fastcgi_pass unix:/run/php/php8.4-fpm.sock;
     fastcgi_param SCRIPT_FILENAME /usr/local/openresty/servers/default/src/errors/index.php;
