--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -15,6 +15,8 @@ http {
 
   real_ip_header proxy_protocol;
 
+  set_real_ip_from 172.27.80.1/32;
+
   log_format main '$proxy_protocol_addr - $remote_user [$time_local] '
   '"$request" $status $body_bytes_sent '
   '"$http_referer" "$http_user_agent"';
