--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -18,7 +18,7 @@ http {
   set_real_ip_from 172.21.128.1/32;
 
   log_format main '$proxy_protocol_addr - $remote_user [$time_local] '
-  '"$request" $status $body_bytes_sent '
+  '"$server_name" "$request" $status $body_bytes_sent '
   '"$http_referer" "$http_user_agent"';
 
   access_log logs/access.log main;
@@ -34,7 +34,7 @@ http {
     end)
     auto_ssl:init()
   }
-
+      
   init_worker_by_lua_block {
     auto_ssl:init_worker()
   }
