--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -10,19 +10,6 @@ http {
 
   include mime.types;
 
-  proxy_set_header X-Real-IP $proxy_protocol_addr;
-  proxy_set_header X-Forwarded-For $proxy_protocol_addr;
-
-  real_ip_header proxy_protocol;
-
-  set_real_ip_from 172.20.48.1/32;
-
-  log_format main '$proxy_protocol_addr - $remote_user [$time_local] '
-  '"$server_name" "$request" $status $body_bytes_sent '
-  '"$http_referer" "$http_user_agent"';
-
-  access_log logs/access.log main;
-
   lua_shared_dict auto_ssl 1m;
   lua_shared_dict auto_ssl_settings 64k;
   resolver 8.8.8.8 ipv6=off;
@@ -42,7 +29,7 @@ http {
   include /usr/local/openresty/servers/*/server.conf;
 
   server {
-    listen 80 proxy_protocol;
+    listen 80;
 
     if ($host ~ "^[0-9]{1,3}(\.[0-9]{1,3}){3}$") {
       return 301 https://mlopes.xyz;
