--- a/servers/default/server.conf
+++ b/servers/default/server.conf
@@ -1,5 +1,5 @@
 server {
-    listen 443 ssl proxy_protocol default_server;
+    listen 443 ssl default_server;
 
     if ($host ~ "^[0-9]{1,3}(\.[0-9]{1,3}){3}$") {
         return 301 https://mlopes.xyz;
@@ -15,7 +15,7 @@ server {
     ssl_certificate /etc/ssl/resty-auto-ssl-fallback.crt;
     ssl_certificate_key /etc/ssl/resty-auto-ssl-fallback.key;
 
-    error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 500 501 502 503 504 505 506 507 508 510 511 /dwapo-hagnarok;
+    error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 500 501 502 503 504 505 506 507 508 510 511 520 550 /dwapo-hagnarok;
 
     location = /dwapo-hagnarok {
         internal;
@@ -26,11 +26,15 @@ server {
     }
 
     location / {
-        return 404;
+        return 550;
     }
 
     location /418 {
         return 418;
+    }
+
+    location /520 {
+        return 520;
     }
 }
 
