--- a/servers/mlopes.xyz/server.conf
+++ b/servers/mlopes.xyz/server.conf
@@ -4,9 +4,7 @@ server {
     server_name mlopes.xyz;
 
     location / {
-        root /usr/local/openresty/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ =404;
+        return 520;
     }
 
 }
